fix jumping breadcrumbs

--- a/src/components/page-breadcrumbs/page-breadcrumbs.scss
+++ b/src/components/page-breadcrumbs/page-breadcrumbs.scss
@@ -53,7 +53,7 @@ $breadcrumb-height: 36px;
   @include focus-ring($color: var(--color-near-black));
 
   padding: 10px 16px;
-  max-height: $breadcrumb-height;
+  height: $breadcrumb-height;
   position: relative;
   text-decoration: none;
   color: var(--color-text-lightest);
@@ -63,7 +63,7 @@ $breadcrumb-height: 36px;
   &.is-active::before {
     content: "";
     width: 100%;
-    height: 100%;
+    height: $breadcrumb-height;
     position: absolute;
     top: 0;
     right: -8px;
